--- a/src/main/resources/templates/WebQuanly/list-nhan-vien.html
+++ b/src/main/resources/templates/WebQuanly/list-nhan-vien.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <title>Quản lý nhân viên</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
+
 <body>
-<div class="container mt-5">
+
+<div class="d-flex">
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+
+    <!-- Nội dung chính bên phải -->
+    <div class="content flex-grow-1">
     <h2>Quản lý nhân viên</h2>
 
     <!-- Hiển thị thông báo -->
@@ -228,7 +236,9 @@
         </div>
     </th:block>
 </div>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/sidebar.js}" defer></script>
+
 </body>
 </html>
