--- a/src/main/resources/templates/WebQuanly/list-khach-hang.html
+++ b/src/main/resources/templates/WebQuanly/list-khach-hang.html
@@ -150,6 +150,7 @@
                     <th>ID</th>
                     <th>Họ tên</th>
                     <th>Tên đăng nhập</th>
+                    <th>Mật khẩu</th>
                     <th>Email</th>
                     <th>Số điện thoại</th>
                     <th>Vai trò</th>
@@ -161,6 +162,7 @@
                     <td th:text="${customerStat.index + 1}"></td>
                     <td th:text="${customer.hoTen}"></td>
                     <td th:text="${customer.tenDangNhap}"></td>
+                    <td th:text="${customer.matKhau}"></td>
                     <td th:text="${customer.email}"></td>
                     <td th:text="${customer.soDienThoai}"></td>
                     <td>
