--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/kich-co}" class="nav-link text-white">
+                <a th:href="@{/acvstore/banhang}" class="nav-link text-white">
                     <i class="fa-solid fa-store"></i> Bán hàng tại quầy
                 </a>
             </li>
@@ -82,7 +82,7 @@
                 <div class="collapse" id="sanphamSubmenu">
                     <ul class="nav flex-column ms-3">
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/products}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/san-pham}" class="nav-link text-white">
                                 <i class="fa-solid fa-list"></i> Danh sách sản phẩm
                             </a>
                         </li>
@@ -114,8 +114,28 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/styles}" class="nav-link text-white">
-                                            <i class="fa-solid fa-shirt"></i> Phong cách
+                                        <a th:href="@{/acvstore/kieu-dang}" class="nav-link text-white">
+                                            <i class="fa-solid fa-shirt"></i> Kiểu dáng
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:href="@{/acvstore/co-ao}" class="nav-link text-white">
+                                            <i class="fa-solid fa-shirt"></i> Cổ áo
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:href="@{/acvstore/tay-ao}" class="nav-link text-white">
+                                            <i class="fa-solid fa-shirt"></i> Tay áo
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:href="@{/acvstore/danh-muc}" class="nav-link text-white">
+                                            <i class="fa-solid fa-shirt"></i> Danh mục
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:href="@{/acvstore/thuong-hieu}" class="nav-link text-white">
+                                            <i class="fa-solid fa-shirt"></i> Thương hiệu
                                         </a>
                                     </li>
                                 </ul>
@@ -132,12 +152,12 @@
                 <div class="collapse" id="giamgiaSubmenu">
                     <ul class="nav flex-column ms-3">
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/vouchers}" class="nav-link text-white">
-                                <i class="fa-solid fa-plus-circle"></i> Tạo phiếu
+                            <a th:href="@{/acvstore/voucher/vouchers}" class="nav-link text-white">
+                                <i class="fa-solid fa-plus-circle"></i> Phiếu giảm giá
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/discount-campaigns}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/chien-dich-giam-gia}" class="nav-link text-white">
                                 <i class="fa-solid fa-percent"></i> Đợt giảm giá
                             </a>
                         </li>
