mot chut sidebar

--- a/src/main/resources/templates/WebQuanLy/co-ao.html
+++ b/src/main/resources/templates/WebQuanLy/co-ao.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-<<div class="d-flex">
+<div class="d-flex">
     <!-- Include sidebar fragment -->
     <div th:replace="~{fragments/sidebar :: sidebar}"></div>
 
