mot chut sidebar

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -121,7 +121,7 @@
                         <li class="nav-item">
                             <a th:href="@{/acvstore/chien-dich-giam-gia}" class="nav-link text-white">
                                 <i class="fa-solid fa-percent"></i>
-                                <span class="nav-text">Đợt giảm giá</span>
+                                <span class="nav-text">Đợt Giảm Giá</span>
                             </a>
                         </li>
                     </ul>
