--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -9,7 +9,7 @@ body {
 .sidebar {
     width: 250px;
     height: 100vh;
-    max-height: 100vh; /* Đảm bảo không vượt quá màn hình */
+    max-height: 100vh;
     background: #343a40;
     color: #fff;
     display: flex;
